asu_isearch 7.x-1.8.5
---------------------
- Added 'isearch_local_lock' setting, allowing the disabling of automatic cron migration updates
- Added onload profile check against Solr for FERPA purposes
- Added migration data cache refresh functionality for running manual migrations

asu_isearch 7.x-1.8.4
---------------------
- Affiliation accordions match iSearch styling

asu_isearch 7.x-1.8.3
---------------------
- Added longterm backup caching for the iSearch assets
- Improved expertise area option filtering for contextual filter form

asu_isearch 7.x-1.8.2
---------------------
- Fixed bug where the legacy primary affiliation filter was breaking the view
- Implemented pulling of subdepartment NIDs dynamically, which fixes bug where saved dept nids weren't updated

asu_isearch 7.x-1.8.1
---------------------
- Fixed issue with pagination not functioning correctly when contextual form is removed
- Webstandards pagination
- Added iSearch profile photo styling

asu_isearch 7.x-1.8
-------------------
- Added dependency on asu_dir_utilities
- First/primary affiliation on a profile is open by default on view
- Research activity links are fixed
- Fixed bug where title filter contained extraneous titles

asu_isearch 7.x-1.7.1
---------------------
- Added entity load hook to update profile image intermittently on load
- Added limit to number of profiles checked for cleanup daily
- Hotfix for non-primary affiliations being filtered from views

asu_isearch 7.x-1.7
-------------------
- Views exposed contextual filters are now using ajax views functionality
- A to Z index filters are now working
- Added support for industry experience fields
- Cleaned up the logic for grabbing iSearch weights - as of now the weight will only be pulled if less than the title
  rank weight
- Fixed bug where lastname secondary sort is not active while rank sort is active

asu_isearch 7.x-1.6
-------------------
- Fixed bug where image styles aren't updating